traefik/traefik.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: egs-conv-ingress
  namespace: egs-conv
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
    # ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /v1/events
        pathType: Prefix
        backend:
          service:
            name: localstack-service
            port:
              number: 4566
        
---
